# djapi-todo

./: .coveragerc  .flake8  .pre-commit-config.yaml  .python-version  Dockerfile  README.md  djapi-todo.yaml  docker-compose-prod_template.yml  docker-compose.yml  drun  env  noxfile.py  pyproject.toml  requirements-dev.txt  requirements.txt  schema.yml  setup.cfg
.github/workflows/: nox-audit_multi-arch.yml  nox-coverage.yml  nox-lint_multi-arch.yml  nox-safety_multi-arch.yml
accounts/: models.py  views.py
accounts/migrations/: 0001_initial.py  0002_customuser_age_customuser_bio_customuser_country_and_more.py  0003_alter_customuser_name.py
accounts/tests/: test_views.py
config/: settings.py  urls.py
docs/: conf.py  contributing.rst  create_new_todos.rst  features.rst  index.rst  installing.rst  package_index.rst
htmlcov/: class_index.html  coverage.json  d_1411a550f4db4113_admin_py.html  d_1411a550f4db4113_apps_py.html  d_1411a550f4db4113_models_py.html  d_1411a550f4db4113_serializers_py.html  d_1411a550f4db4113_tests_py.html  d_1411a550f4db4113_urls_py.html  d_1411a550f4db4113_views_py.html  d_1ea838694151cac8_test_py.html  d_1ea838694151cac8_urls_py.html  d_509fd8af0f7a1b49_admin_py.html  d_509fd8af0f7a1b49_apps_py.html  d_509fd8af0f7a1b49_forms_py.html  d_509fd8af0f7a1b49_models_py.html  d_509fd8af0f7a1b49_urls_py.html  d_509fd8af0f7a1b49_views_py.html  d_9df13ddeb1e47e46_admin_py.html  d_9df13ddeb1e47e46_apps_py.html  d_9df13ddeb1e47e46_forms_py.html  d_9df13ddeb1e47e46_models_py.html  d_9df13ddeb1e47e46_urls_py.html  d_9df13ddeb1e47e46_views_py.html  d_a862e474e7d50395_test_models_py.html  d_b88c3b5a8ce6a61b_test_forms_py.html  d_b88c3b5a8ce6a61b_test_views_py.html  d_dfdacaa496597cde_test_forms_py.html  d_dfdacaa496597cde_test_models_py.html  d_dfdacaa496597cde_test_urls_py.html  d_dfdacaa496597cde_test_views_py.html  function_index.html  index.html  status.json  z_1411a550f4db4113_admin_py.html  z_1411a550f4db4113_apps_py.html  z_1411a550f4db4113_models_py.html  z_1411a550f4db4113_serializers_py.html  z_1411a550f4db4113_urls_py.html  z_1411a550f4db4113_views_py.html  z_1ea838694151cac8_test_py.html  (+20 more)
pages/: urls.py
pages/tests/: test_views.py
static/css/: base.css
staticfiles/: staticfiles.json
templates/: base.html
templates/account/: user_detail.html  user_form.html
templates/admin/: base_site.html
templates/pages/: home.html  success.html
templates/todos/: todo_list.html
todos/: serializers.py  tests.py  urls.py  views.py
todos/migrations/: 0001_initial.py
todos/tests/: test_models.py
