[tool.black]
line-length = 79
# include =
exclude = '''
/(
    \.git
  | __pycache__
  | .pytest_cache
  | .venv
  | alembic
  | staticfiles
  | build
  | dist
)/
'''

[tool.poetry]
name = "djapi-todo"
version = "0.1.0"
description = "Basic to-do application & API built with Django & Djano REST Framework (DRF)"
authors = ["Kevin Bowen <kevin.bowen@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Django = "~=4.0.0"
environs = {extras = ["django"], version = "^9.5.0"}
djangorestframework = "~=3.13.0"
django-cors-headers = "~=3.10.0"
whitenoise = "5.3.0"
gunicorn = "~=20.1.0"
psycopg2-binary = "^2.9.3"
dj-rest-auth = "2.1.11"
django-allauth = "~=0.48.0"
drf-spectacular = "^0.23.1"

[tool.poetry.dev-dependencies]
pre-commit = "^2.20.0"
black = "^22.6.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
