[tool.black]
line-length = 79
# include =
exclude = '''
/(
    \.git
  | __pycache__
  | .pytest_cache
  | .venv
  | alembic
  | staticfiles
  | build
  | dist
)/
'''

[tool.coverage.paths]
source = ["accounts", "config", "todos", "pages"]

[tool.coverage.run]
branch = true
source = ["config"]
omit = [
    "*/__init__.py",
    "*manage.py",
    "*settings*.py",
    "*urls.py",
    "*admin.py",
    "*migrations/*",
    "*tests/*",
    "*test_*.py",
    "*tests.py",
    "*wsgi.py",
    "*conftest.py",
    "*/extra*",
]
plugins = [
    "django_coverage_plugin",
]

[tool.coverage.django_coverage_plugin]
template_extensions = "html, txt, tex, email"

[tool.coverage.report]
show_missing = true

[tool.poetry]
name = "djapi-todo"
version = "0.1.0"
description = "Basic to-do application & API built with Django & Djano REST Framework (DRF)"
authors = ["Kevin Bowen <kevin.bowen@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Django = "4.0.7"
environs = {extras = ["django"], version = "^9.5.0"}
djangorestframework = "~=3.13.0"
django-cors-headers = "~=3.10.0"
whitenoise = "5.3.0"
gunicorn = "~=20.1.0"
psycopg2-binary = "^2.9.3"
dj-rest-auth = "2.1.11"
django-allauth = "~=0.48.0"
drf-spectacular = "^0.23.1"

[tool.poetry.dev-dependencies]
pre-commit = "^2.20.0"
black = "^22.6.0"
flake8 = "^4.0.1"
coverage = {extras = ["toml"], version = "^6.4.3"}
pytest-cov = "^3.0.0"
pytest = "^7.1.2"
pytest-django = "^4.5.2"
django-coverage-plugin = "^2.0.3"
django-pytest = "^0.2.0"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
filterwarnings = [
    "ignore::django.utils.deprecation.RemovedInDjango50Warning",
    "ignore::django.utils.deprecation.RemovedInDjango41Warning",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
