[tool.black]
line-length = 79
# include =
exclude = '''
/(
    \.git
  | __pycache__
  | .pytest_cache
  | .venv
  | alembic
  | staticfiles
  | build
  | dist
)/
'''

[tool.coverage.paths]
source = ["accounts", "config", "todos", "pages"]

[tool.coverage.run]
branch = true
source = ["config"]
omit = [
    "*conftest.py",
    "*manage.py",
    "*settings*.py",
    "*test.py",
    "*wsgi.py",
    "*/__init__.py",
    "*/migrations/*",
    "*/factories.py",
    "*/tests/*",
]
plugins = [
    "django_coverage_plugin",
]

[tool.coverage.django_coverage_plugin]
template_extensions = "html, txt, tex, email"

[tool.coverage.report]
show_missing = true

[tool.poetry]
name = "djapi-todo"
version = "0.1.0"
description = "Basic to-do application & API built with Django & Django REST Framework (DRF)"
authors = ["Kevin Bowen <kevin.bowen@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Django = "4.2.0"
environs = {extras = ["django"], version = "^9.5.0"}
djangorestframework = "^3.14.0"
django-cors-headers = "^3.13.0"
whitenoise = "^6.2.0"
gunicorn = "~=20.1.0"
psycopg2-binary = "^2.9.5"
dj-rest-auth = "^2.2.0"
django-allauth = "^0.54.0"
drf-spectacular = "^0.25.0"
django-crispy-forms = "^2.0"
Pillow = "^9.2.0"
django-countries = "^7.3.2"
django-extensions = "^3.2"
crispy-bootstrap4 = "^2022.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.0.0"
black = "^23.0.0"
flake8 = "^6.0.0"
coverage = {extras = ["toml"], version = "^7.0.0"}
pytest-cov = "^4.0.0"
pytest = "^7.1.2"
pytest-django = "^4.5.2"
django-coverage-plugin = "^3.0.0"
django-pytest = "^0.2.0"
nox = "^2023.4.22"
flake8-bandit = "^4.0.0"
flake8-black = "^0.3.3"
flake8-bugbear = "^23.0.0"
flake8-docstrings = "^1.6.0"
safety = "2.4.0b1"
factory-boy = "3.0.1"
django-extensions = "^3.2.0"
ipython = "^8.4.0"
friendly = "^0.7.0"
colorama = "^0.4.5"
Sphinx = "^6.0.0"
flake8-import-order = "^0.18.2"
django-debug-toolbar = "^4.0.0"
django-test-plus = "^2.2.1"
pytest-sugar = "^0.9.6"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
filterwarnings = [
    # "ignore::django.utils.deprecation.RemovedInDjango50Warning",
    # "ignore::django.utils.deprecation.RemovedInDjango41Warning",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
